# metamodule-nozori

./: .gitmodules  CMakeLists.txt  plugin-mm.json
VCV_nozori/src/: c_fonctions.h  plugin.cpp
